--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router": "^7.10.0",
     "react-tabs": "^6.1.0",
     "react-toastify": "^11.0.5",
+    "recharts": "^3.5.1",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
